# numerals

./: .gitignore  CHANGES.markdown  LICENSE  Numerals.hs  README  README.markdown  TODO  TODO.markdown  numerals.cabal  numerals.nix  shell.nix  test.hs
Text/: Numeral.hs
Text/Numeral/: Debug.hs  Exp.hs  Joinable.hs  Language.hs  Misc.hs  Pelletier.hs  Positional.hs  Repr.hs  Roman.hs  Rules.hs
Text/Numeral/Language/: BigNum.hs  CHN.hs  DE.hs  EN.hs  EO.hs  FR.hs  IT.hs  JA.hs  LA.hs  NL.hs  NO.hs  NQM.hs  PT.hs  SP.hs  SV.hs  YOR.hs
Text/Numeral/Language/DE/: TestData.hs
Text/Numeral/Language/EN/: TestData.hs
Text/Numeral/Language/EO/: TestData.hs
Text/Numeral/Language/FR/: TestData.hs
Text/Numeral/Language/JA/: TestData.hs
Text/Numeral/Language/LA/: TestData.hs
Text/Numeral/Language/NL/: TestData.hs
Text/Numeral/Language/SV/: TestData.hs
Text/Numeral/Language/YOR/: TestData.hs
src-bench/: bench.hs
src-test/: test.hs
src-test/Text/Numeral/: Test.hs
src-test/Text/Numeral/Language/ACH/: TestData.hs
src-test/Text/Numeral/Language/ADY/: TestData.hs
src-test/Text/Numeral/Language/AF/: TestData.hs
src-test/Text/Numeral/Language/AFR/: TestData.hs
src-test/Text/Numeral/Language/AMP/: TestData.hs
src-test/Text/Numeral/Language/ARI/: TestData.hs
src-test/Text/Numeral/Language/ARN/: TestData.hs
src-test/Text/Numeral/Language/AST/: TestData.hs
src-test/Text/Numeral/Language/AZ/: TestData.hs
src-test/Text/Numeral/Language/AZE/: TestData.hs
src-test/Text/Numeral/Language/BA/: TestData.hs
src-test/Text/Numeral/Language/BAK/: TestData.hs
src-test/Text/Numeral/Language/BAM/: TestData.hs
src-test/Text/Numeral/Language/BAR/: TestData.hs
src-test/Text/Numeral/Language/BG/: TestData.hs
src-test/Text/Numeral/Language/BM/: TestData.hs
src-test/Text/Numeral/Language/BUL/: TestData.hs
src-test/Text/Numeral/Language/CA/: TestData.hs
src-test/Text/Numeral/Language/CAF/: TestData.hs
src-test/Text/Numeral/Language/CAR/: TestData.hs
src-test/Text/Numeral/Language/CAT/: TestData.hs
src-test/Text/Numeral/Language/CBK/: TestData.hs
src-test/Text/Numeral/Language/CES/: TestData.hs
src-test/Text/Numeral/Language/CHN/: TestData.hs
src-test/Text/Numeral/Language/CHR/: TestData.hs
src-test/Text/Numeral/Language/CKU/: TestData.hs
src-test/Text/Numeral/Language/CLM/: TestData.hs
src-test/Text/Numeral/Language/CO/: TestData.hs
src-test/Text/Numeral/Language/COD/: TestData.hs
src-test/Text/Numeral/Language/COO/: TestData.hs
src-test/Text/Numeral/Language/COS/: TestData.hs
src-test/Text/Numeral/Language/CRG/: TestData.hs
src-test/Text/Numeral/Language/CRO/: TestData.hs
src-test/Text/Numeral/Language/CS/: TestData.hs
src-test/Text/Numeral/Language/CY/: TestData.hs
src-test/Text/Numeral/Language/CYM/: TestData.hs
src-test/Text/Numeral/Language/DA/: TestData.hs
src-test/Text/Numeral/Language/DAN/: TestData.hs
src-test/Text/Numeral/Language/DE/: TestData.hs
src-test/Text/Numeral/Language/DEU/: TestData.hs
src-test/Text/Numeral/Language/DJK/: TestData.hs
src-test/Text/Numeral/Language/EKK/: TestData.hs
src-test/Text/Numeral/Language/EMI/: TestData.hs
src-test/Text/Numeral/Language/EN/: TestData.hs
src-test/Text/Numeral/Language/ENG/: TestData.hs
src-test/Text/Numeral/Language/EO/: TestData.hs
src-test/Text/Numeral/Language/EPO/: TestData.hs
src-test/Text/Numeral/Language/ES/: TestData.hs
src-test/Text/Numeral/Language/ET/: TestData.hs
src-test/Text/Numeral/Language/FAO/: TestData.hs
src-test/Text/Numeral/Language/FI/: TestData.hs
src-test/Text/Numeral/Language/FIN/: TestData.hs
src-test/Text/Numeral/Language/FO/: TestData.hs
src-test/Text/Numeral/Language/FR/: TestData.hs
src-test/Text/Numeral/Language/FRA/: TestData.hs
src-test/Text/Numeral/Language/FRA_JER/: TestData.hs
src-test/Text/Numeral/Language/FRR/: TestData.hs
src-test/Text/Numeral/Language/FUR/: TestData.hs
src-test/Text/Numeral/Language/GCF_MTQ/: TestData.hs
src-test/Text/Numeral/Language/GIL/: TestData.hs
src-test/Text/Numeral/Language/GL/: TestData.hs
src-test/Text/Numeral/Language/GLG/: TestData.hs
src-test/Text/Numeral/Language/GLV/: TestData.hs
src-test/Text/Numeral/Language/GSW/: TestData.hs
src-test/Text/Numeral/Language/GV/: TestData.hs
src-test/Text/Numeral/Language/HAI/: TestData.hs
src-test/Text/Numeral/Language/HAT/: TestData.hs
src-test/Text/Numeral/Language/HE/: TestData.hs
src-test/Text/Numeral/Language/HEB/: TestData.hs
src-test/Text/Numeral/Language/HOP/: TestData.hs
src-test/Text/Numeral/Language/HR/: TestData.hs
src-test/Text/Numeral/Language/HRV/: TestData.hs
src-test/Text/Numeral/Language/HT/: TestData.hs
src-test/Text/Numeral/Language/HU/: TestData.hs
src-test/Text/Numeral/Language/HUN/: TestData.hs
src-test/Text/Numeral/Language/HUP/: TestData.hs
src-test/Text/Numeral/Language/HUR/: TestData.hs
src-test/Text/Numeral/Language/HY/: TestData.hs
src-test/Text/Numeral/Language/HYE/: TestData.hs
src-test/Text/Numeral/Language/IBO/: TestData.hs
src-test/Text/Numeral/Language/ID/: TestData.hs
src-test/Text/Numeral/Language/IG/: TestData.hs
src-test/Text/Numeral/Language/IND/: TestData.hs
src-test/Text/Numeral/Language/INH/: TestData.hs
src-test/Text/Numeral/Language/IT/: TestData.hs
src-test/Text/Numeral/Language/ITA/: TestData.hs
src-test/Text/Numeral/Language/IZH/: TestData.hs
src-test/Text/Numeral/Language/JA/: TestData.hs
src/Text/: Numeral.hs
src/Text/Numeral/: BigNum.hs  Debug.hs  Entry.hs  Exp.hs  Grammar.hs  Misc.hs  Render.hs  Repr.hs  Rules.hs
src/Text/Numeral/Exp/: Classes.hs  Reified.hs
src/Text/Numeral/Grammar/: Reified.hs
src/Text/Numeral/Language/: #Entries.hs#  AF.hs  AFR.hs  AMP.hs  BG.hs  BUL.hs  CES.hs  CHN.hs  CHR.hs  CLM.hs  CRO.hs  CS.hs  DA.hs  DAN.hs  DE.hs  DEU.hs  EN.hs  ENG.hs  EO.hs  EPO.hs  ES.hs  Entries.hs  FI.hs  FIN.hs  FR.hs  FRA.hs  FUR.hs  GLV.hs  GSW.hs  GV.hs  HE.hs  HEB.hs  HOP.hs  IBO.hs  IT.hs  ITA.hs  JA.hs  JPN.hs  LA.hs  LAT.hs  (+33 more)
src/Text/Numeral/Render/: Utils.hs
test/: test.hs
(+117 files in other folders)
